[package]
name = "tower-grpc-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-grpc-gen = { path = "../tower-grpc-gen" }
log = "*"
env_logger = "*"
hyper = "0.12"
futures = "0.1"
tokio = "0.1"
tower-grpc = "0.1"
tower-hyper = "0.1"
tower-request-modifier = "0.1"
tower-util = "0.1"
