[package]
name = "tower-grpc-gen"
version = "0.1.0"
authors = ["x7c1 <jmtaro+x7c1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
prost = "0.5"
#tokio = "0.1"
tower-grpc = { version = "0.1",  features = ["tower-hyper"] }
#tower-service = "0.2"
#tower-util = "0.1"

[build-dependencies]
prost-build = "0.5"
tower-grpc-build = "0.1"
