[package]
name = "tower-grpc-gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
prost = "0.5"
tower-grpc = { version = "0.1",  features = ["tower-hyper"] }

[build-dependencies]
prost-build = "0.5"
tower-grpc-build = { version = "0.1",  features = ["tower-hyper"] }
